--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  height: 100%;
+  background: #000;
+
+  font-family: sans-serif;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  max-width: 1000px;
+  width: 90%;
+  margin: 5vh auto;
+  padding: 3%;
+  border: 1px solid #ffc107;
+  min-height: 60vh;
+  color: #ffc107;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.logo {
+  width: 200px;
+  height: 100px;
+  background-image: url('./assets/star-wars-4.svg');
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.no_movie {
+  margin-top: 50px;
+  width: 100%;
+  height: 500px;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.no_movie img {
+  height: 100%;
 }
